fix content toggle wide width issue and add alignment control

--- a/packages/ultimate-blocks/src/blocks/content-toggle/style.scss
+++ b/packages/ultimate-blocks/src/blocks/content-toggle/style.scss
@@ -7,7 +7,6 @@
 @import "../../common";
 .wp-block-ub-content-toggle {
 	margin: 20px 0 20px 0;
-	max-width: 100%;
 }
 
 .wp-block-ub-content-toggle-accordion {
